--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="login_page_title">Login Page</string>
     <string name="login_page_desc">Introduce login information to access your user profile.</string>
     <string name="email">Email</string>
-    <string name="password">Password\n</string>
-    <string name="sign_in">Sign in\n</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
     <string name="login_error">Login error</string>
     <string name="empty_fields_error">Email or password can\'t be empty</string>
-    <string name="invalid_email_error">Invalid email format\n</string>
+    <string name="invalid_email_error">Invalid email format</string>
     <string name="invalid_password_error">Password must has at least 6 characters.</string>
+    <string name="register_error">Register error\n</string>
 </resources>
