--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="invalid_email_error">Invalid email format</string>
     <string name="invalid_password_error">Password must has at least 6 characters.</string>
     <string name="register_error">Register error\n</string>
+    <string name="error_empty_email">Please introduce your email</string>
+    <string name="error_empty_password">Please introduce your password\n</string>
+    <string name="error_empty_fields">Please, introduce your email and password</string>
+    <string name="error_invalid_email">Email format is not correct.</string>
+    <string name="error_short_password">Password is too short.</string>
+    <string name="login_successful">Login has been sucessfull!</string>
+    <string name="login_unsuccessful">Login try unsuccessful</string>
+    <string name="weak_password">"Password must contain at least an uppercase letter, a lowercase letter and a number. "</string>
+    <string name="empty_email">Please, introduce your email</string>
+    <string name="empty_password">Please, introduce your password\n</string>
 </resources>
