Implemented error message when is not possible to get rooms list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="error_splash_screen">Error, it wasnt possible to retrieve user information.</string>
     <string name="loading_splash_screen">Checking session..</string>
     <string name="username">Username</string>
+    <string name="error_get_rooms">Error getting rooms from server</string>
 
     // Unordered strings
 
