--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="username">Username</string>
     <string name="error_get_rooms">Error getting rooms from server</string>
     <string name="list_rooms_title">Available rooms</string>
+    <string name="error_action">Action has failed</string>
 
     // Unordered strings
 
