--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
 
     // Splash Screen
-    <string name="error_splash_screen">Error, it wasnt possible to retrieve user information.</string>
+    <string name="error_splash_screen">Error, it wasn\'t possible to retrieve user information.</string>
     <string name="loading_splash_screen">Checking session..</string>
     <string name="username">Username</string>
     <string name="error_get_games">Error getting games from server</string>
