--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="leave_game_button">Leave Game</string>
     <string name="error_action">Action has failed</string>
     <string name="calculating_score">Calculating score...</string>
+    <string name="your_position">Current position</string>
 </resources>
