Add user game history feature to profile screen
- Introduced GetHistoryUseCase to fetch user's game history.
- Updated ProfileViewModel to load user history and manage UI state.
- Enhanced ProfileScreen to display game history with loading and error states.
- Created PlayedGameCard component for rendering individual game results.
- Updated strings.xml with new UI strings for game history.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,11 @@
     <string name="error_get_users">Error getting list of users</string>
     <string name="ranking_header">Ranking of players</string>
 
+    // Profile Screen
+    <string name="history_header">Played games</string>
+    <string name="error_get_history">Error getting list of played games</string>
+    <string name="vs">vs</string>
+
     // Others
     <string name="leave_game_button">Leave Game</string>
     <string name="error_action">Action has failed</string>
@@ -106,6 +111,8 @@
     <string name="delete_button">Delete</string>
     <string name="cancel_button">Cancel</string>
     <string name="error_recent_login_required">Recent login required. Please log in again.</string>
+    <string name="victory">Victory</string>
+    <string name="defeat">Defeat</string>
 
 
 </resources>
