Enhance UI and state management in HomeScreen and ProfileScreen; add no available games message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     // Others
     <string name="leave_game_button">Leave Game</string>
     <string name="error_action">Action has failed</string>
+    <string name="no_available_games">There is not available games</string>
 </resources>
