Refactor padding values across multiple components for improved consistency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,6 @@
     // Others
     <string name="leave_game_button">Leave Game</string>
     <string name="error_action">Action has failed</string>
+    <string name="delete_confirmation_text">Delete confirmation</string>
+    <string name="delete_confirmation_error">Write \"Delete\" before confirm</string>
 </resources>
