--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,6 @@
     <string name="passwords_does_not_match">Repeated password does not match</string>
     <string name="invalid_username">Invalid Username</string>
     <string name="invalid_password">Invalid Username</string>
+    <string name="unmute_sound">Unmute sound</string>
+    <string name="mute_sound">Mute sound</string>
 </resources>
